Updated copyright notice in all files

--- a/README
+++ b/README
@@ -71,7 +71,7 @@ Here are some links for those that would like to read more on the various aspect
 
 -=] LICENSE [=-
 These files are part of the ThreeBrooks homebrew recipe application
-Copyright (C) 2011 Dane Gardner
+Copyright (C) 2011-2013 Dane Gardner
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
